--- a/style.css
+++ b/style.css
@@ -37,7 +37,6 @@ a:visited {
   align-items: center;
   align-content: center;
   position: relative;
-  z-index: 2;
 }
 
 .btn {
@@ -62,15 +61,30 @@ a:visited {
 .showcase.background {
   width: 100%;
   height: 36rem;
+  position: relative;
   background: url(./images/programming-1873854_1920.png) no-repeat center
     center/cover;
 }
 
-.showcase-content {
+.showcase.background::after {
+  content: "";
   position: absolute;
-  top: 50%;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 1;
+  background: rgba(0, 0, 0, 0.6);
+  box-shadow: inset 0px 0px 200px 100px #141414,
+    inset 0px 0px 200px 50px #141414;
+}
+
+.showcase-content {
+  z-index: 2;
+  position: absolute;
+  top: 45%;
   left: 50%;
-  transform: translate(-50%);
+  transform: translate(-50%, -50%);
   color: #fff;
 }
 
@@ -81,16 +95,33 @@ a:visited {
   font-weight: 100;
 }
 
+.text-intro {
+  font-size: 2rem;
+  font-weight: 200;
+  margin-bottom: 1rem;
+}
+
+.text-intro p {
+  font-weight: 100;
+}
+
 /* Media Queries */
 @media screen and (max-width: 1110px) {
+  .header {
+    margin: 0 0;
+    padding: 2.5rem 0;
+    height: 110px;
+  }
   .btn {
     display: none;
   }
   .btn.burger {
+    position: absolute;
+    right: 0px;
+    bottom: 8px;
     display: flex;
     height: 10vh;
     padding: 3rem 3rem;
-    justify-content: center;
     align-items: center;
   }
 }
