--- a/style.css
+++ b/style.css
@@ -124,4 +124,7 @@ a:visited {
     padding: 3rem 3rem;
     align-items: center;
   }
+  .showcase.background::after {
+    box-shadow: inset 0px 0px 100px 10px #141413, inset 0px 0px 100px 5px #141414;
+  }
 }
