--- a/styles/style.css
+++ b/styles/style.css
@@ -17,52 +17,17 @@ body {
   z-index: 1;
 }
 
-ul {
-  list-style: none;
-}
-
 a,
 a:visited {
   text-decoration: none;
 }
 
-/* Header */
-.header {
-  margin: 2.5rem 0;
-  width: 100%;
-  height: 90px;
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  align-items: center;
-  align-content: center;
-  position: relative;
-}
-
-.btn {
-  background-color: #f06160;
-  padding: 1rem 2rem;
-  color: #fff;
-  text-transform: uppercase;
-  border: 3px solid #fff;
-}
-
-.btn.burger {
-  display: none;
-}
-
-.header a:hover {
-  background: #ffa251;
-  color: #fff;
-}
-
 /* Showcase */
-
 .showcase.background {
   width: 100%;
   height: 36rem;
   position: relative;
-  background: url(./images/programming-1873854_1920.png) no-repeat center
+  background: url(../data/programming-1873854_1920.png) no-repeat center
     center/cover;
 }
 
@@ -75,8 +40,8 @@ a:visited {
   height: 100%;
   z-index: 1;
   background: rgba(0, 0, 0, 0.6);
-  box-shadow: inset 0px 0px 200px 100px #141414,
-    inset 0px 0px 200px 50px #141414;
+  box-shadow: inset 0px 0px 200px 100px var(--dark-color),
+    inset 0px 0px 200px 50px var(--dark-color);
 }
 
 .showcase-content {
@@ -87,13 +52,7 @@ a:visited {
   transform: translate(-50%, -50%);
   color: #fff;
 }
-/* Grid */
 
-.grid-container{
-  display: grid;
-  grid-template-columns: 50% 50%;
-  grid-template-rows: 80px 200px
-}
 /* Text */
 
 .text-xl {
@@ -104,7 +63,6 @@ a:visited {
 .text-intro {
   font-size: 2rem;
   font-weight: 200;
-  margin-bottom: 1rem;
 }
 
 .text-intro p {
@@ -114,25 +72,8 @@ a:visited {
 /* Media Queries */
 
 @media screen and (max-width: 1110px) {
-  .header {
-    margin: 0 0;
-    padding: 2.5rem 0;
-    height: 110px;
-  }
-  .btn {
-    display: none;
-  }
-  .btn.burger {
-    position: absolute;
-    right: 0px;
-    bottom: 8px;
-    display: flex;
-    height: 10vh;
-    padding: 3rem 3rem;
-    align-items: center;
-  }
   .showcase.background::after {
-    box-shadow: inset 0px 0px 100px 10px #141413,
-      inset 0px 0px 100px 5px #141414;
+    box-shadow: inset 0px 0px 100px 10px var(--dark-color),
+      inset 0px 0px 100px 5px var(--dark-color);
   }
 }
