--- a/static/style.css
+++ b/static/style.css
@@ -18,6 +18,8 @@ div {
   display: flex;
   align-items: center;
   justify-content: center;
+  background-position: center;
+  background-size: cover;
 }
 
 .container {
@@ -27,11 +29,6 @@ div {
 }
 
 .wrapper {
-  height: 100vh;
-  width: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
   flex-direction: column;
 }
 
@@ -41,55 +38,33 @@ div {
 
 /* https://coolors.co/000000-c8c5c1-065a82-82c3fb-8c5f66 */
 #pg1 {
-  background: url(../static/programming-1873854_1920.png) repeat-y center
-    center/cover;
+  background-image: url(../static/programming-1873854_1920.png);
   color: white;
-
-  background-attachment: fixed;
 }
 #pg2 {
-  /* background: #f2f7f2; */
-  background: url(../static/purdue.jpg);
-
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-  /* background-attachment: fixed; */
+  background-image: url(../static/purdue.jpg);
 }
 
 #pg3 {
   background: #065a82;
-  /* background: url(../static/canyon.jpeg) no-repeat; */
-  background-size: cover;
-  background-attachment: fixed;
 }
 
 #pg4 {
-  /* background: #187795; */
-  background: url(../static/canyon.jpeg);
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
+  background-image: url(../static/canyon.jpeg);
 }
 #pg5 {
   background: #8c5f66;
-  /* background: url(../static/cat.jpg); */
-  background-size: cover;
-  background-attachment: fixed;
 }
 
-.footparent {
-  width: 100%;
+.parallax {
+  background-attachment: scroll;
+}
+
+.foot {
   height: 5vh;
   background-color: white;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
-.footparent p {
-  font-size: 2vh;
   color: black;
+  font-size: 2vh;
 }
 
 @media screen and (max-width: 1110px) {
